[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI Themes/pibba.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 42.0
margin_top = -36.0
margin_right = -42.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Main"]
margin_right = 236.0
margin_bottom = 34.0
theme = ExtResource( 1 )
text = "Play"

[node name="Settings" type="Button" parent="Main"]
margin_top = 38.0
margin_right = 236.0
margin_bottom = 72.0
theme = ExtResource( 1 )
text = "Settings"

[node name="Settings" type="Container" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -90.0
margin_right = 118.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Settings"]
margin_right = 236.0
margin_bottom = 34.0
theme = ExtResource( 1 )
text = "Back"

[node name="Volume" type="Panel" parent="Settings"]
margin_top = 38.0
margin_right = 236.0
margin_bottom = 181.0
theme = ExtResource( 1 )

[node name="Volume Text" type="Label" parent="Settings/Volume"]
anchor_right = 1.0
margin_right = -1.52588e-05
margin_bottom = 34.0
text = "Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX Volume" type="HSlider" parent="Settings/Volume"]
margin_top = 122.0
margin_right = 116.0
margin_bottom = 142.0
theme = ExtResource( 1 )
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX Volume Value" type="Label" parent="Settings/Volume"]
margin_top = 88.0
margin_right = 118.0
margin_bottom = 122.0
theme = ExtResource( 1 )
text = "SFX"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Master Volume" type="HSlider" parent="Settings/Volume"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -3.5
margin_bottom = 16.5
theme = ExtResource( 1 )
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Master Volume Value" type="Label" parent="Settings/Volume"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -37.5
margin_right = -1.52588e-05
margin_bottom = -3.5
theme = ExtResource( 1 )
text = "Master"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music Volume" type="HSlider" parent="Settings/Volume"]
margin_left = 118.0
margin_top = 122.0
margin_right = 234.0
margin_bottom = 142.0
theme = ExtResource( 1 )
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music Volume Value" type="Label" parent="Settings/Volume"]
margin_left = 118.0
margin_top = 88.0
margin_right = 234.0
margin_bottom = 122.0
theme = ExtResource( 1 )
text = "MUS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Main/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Settings/Back" to="." method="_on_Back_pressed"]
